syntax = "proto3";
package hypurr;


service Telegram {
    rpc HyperliquidLaunchTrade(HyperliquidLaunchTradeRequest) returns (HyperliquidLaunchTradeResponse);
}

message HyperliquidLaunchTradeRequest {
    map<string, string> auth_data = 1;
    int64 launch_id = 2;
    int64 wallet_id = 3;
    HyperliquidLaunchTradeDirection direction = 4;
    double amount = 5;
}

message HyperliquidLaunchTradeResponse {
    double base_amount = 1;
    double quote_amount = 2;
    string message = 3;
    bool success = 4;
}

enum HyperliquidLaunchTradeDirection {
    BUY = 0;
    SELL = 1;
}

service Static {
    rpc HyperliquidWallet(HyperliquidWalletRequest) returns (HyperliquidWalletResponse);
    rpc HyperliquidLaunch(HyperliquidLaunchRequest) returns (HyperliquidLaunchResponse);
}

message HyperliquidWalletRequest {
    StringValue ethereum_address = 1;
}

message HyperliquidWalletResponse {
    HyperliquidWallet wallet = 1;
}


message HyperliquidWallet {
    int64 id = 1;
    string name = 2;
    optional Int64Value telegram_id = 3;
    string ethereum_address = 4;
    int32 points = 5;
    repeated HyperliquidWalletMovement movements = 6;
    repeated HyperliquidWalletBalance spot_balances = 7;
    repeated HyperliquidLaunchBalance launch_balances = 8;
    bool is_agent = 9;
    bool is_read_only = 10;
}

message HyperliquidWalletBalance {
    Int64Value telegram_id = 1;
    int64 wallet_id = 2;
    int64 token_id = 3;
    double balance = 4;
}

message HyperliquidLaunchBalance {
    Int64Value telegram_id = 1;
    int64 wallet_id = 2;
    int64 launch_id = 3;
    int64 balance = 4;
}

message HyperliquidWalletMovement {
    Int64Value telegram_id = 1;
    HyperliquidWallet wallet = 2;
    int64 wallet_id = 3;
    string hash = 4;
    string type = 5;
    int64 token_id = 6;
    HyperliquidToken token = 7;
    double amount = 8;
    double usdc_value = 9;
    string destination = 10;
    double fee = 11;
    int64 timestamp = 12;
}


message HyperliquidToken {
    int64 id = 1;
    string name = 2;
    int64 index = 3;
    int64 sz_decimals = 4;
    int64 wei_decimals = 5;
    string token_id = 6;
    double circulating_supply = 7;
    HyperliquidTokenDeployInfo deploy_info = 8;
    repeated HyperliquidTokenGenesis geneses = 9;
    double hlq_balance = 10;
    string full_name = 11;
    HyperliquidTokenStatistics statistics = 12;
}


message HyperliquidTokenDeployInfo {
    int64 token_id = 1;
    int64 height = 2;
    string deployer = 3;
    string register_tx = 4;
    string register_spot_tx = 5;
    string genesis_tx = 6;
    string hyperliquidity_tx = 7;
    double hip2_price = 8;
    int32 hip2_order_count = 9;
    double hip2_order_size = 10;
}

message HyperliquidTokenGenesis {
    int64 token_id = 1;
    string target = 2;
    double amount = 3;
    string type = 4;
    int64 target_token_id = 5;
}

message HyperliquidTokenStatistics {
    int64 token_id = 1;
    int64 holder_count = 2;
    double concentration_coefficient = 3;
}

message StringValue {
    string value = 1;
}

message Int64Value {
    int64 value = 1;
}

message HyperliquidLaunchRequest {
    int64 id = 1;
}

message HyperliquidLaunchResponse {
    HyperliquidLaunch launch = 1;
}

message HyperliquidLaunch {
    int64 id = 1;
    int64 telegram_id = 2;
    TelegramUserPublic telegram_user = 3;
    string description = 4;
    bool listed = 5;
    bool settled = 6;
    int64 x0 = 7;
    int64 session_id = 8;
    HyperliquidWalletDeploySession session = 9;
    string media_file_id = 10;
    int64 topic_id = 11;
    int64 x = 12;
    int64 y = 13;
    int64 k = 14;
    repeated HyperliquidLaunchFill fills = 15;
    double daily_ntl_volume = 16;
    double previous_day_px = 17;
    int64 last_event_timestamp = 18;
    HyperliquidLaunchPoolType pool_type = 19;
    int64 decimals = 20;
    HyperliquidPublicWallet session_wallet = 21;
    string media_type = 22;
    int64 listed_timestamp = 23;
    HyperliquidPublicWallet dev_wallet = 24;
}

enum HyperliquidLaunchPoolType {
    Quadratic = 0;
    QuadraticV2 = 1;
    Linear = 2;
    Fixed = 3;
}

message HyperliquidLaunchFill {
    int64 launch_id = 1;
    int64 telegram_id = 2;
    TelegramUserPublic telegram = 3;
    HyperliquidPublicWallet wallet = 4;
    int64 usdc_delta = 5;
    int64 launch_delta = 6;
    int64 timestamp = 7;
    string movement_hash = 8;
    int64 id = 9;
}

message HyperliquidPublicWallet {
    string ethereum_address = 1;
}

message HyperliquidWalletDeploySession {
    int64 id = 1;
    int64 telegram_id = 2;
    int32 step = 3;
    string token_name = 4;
    string full_name = 5;
    int32 token_decimals = 6;
    int32 token_wei = 7;
    double token_supply = 8;
    int32 start_makret_cap = 9;
    int64 anchor1_token_id = 10;
    HyperliquidToken anchor1_token = 11;
    int64 anchor2_token_id = 12;
    HyperliquidToken anchor2_token = 13;
    int64 token_id = 14;
    int32 spot_pair_id = 15;
    double deploy_treshold = 16;
    HyperliquidWalletDeploySessionGenesis geneses = 17;
}

message TelegramUserPublic { 
    int64 id = 1;
    string username = 2;
    string picture_file_id = 3;
    int64 reputation_score = 4;
}

message HyperliquidWalletDeploySessionGenesis {
    string target = 1;
    int32 share = 2;
}
